--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p class="songplayingname">Le Aaunga - Arijit Singh</p>
         </div>
         <div class="songduration">
-            <p class="currenttime">00:00</p>
+            <p id="currenttime">00:00</p>
             /
             <p id="totaltime">00:00</p>
         </div>
